# google-api-cpp-client

./: .gitignore  CMakeLists.txt  prepare_dependencies.py
service_apis/analytics/: CMakeLists.txt
service_apis/analytics/google/analytics_api/: CMakeLists.txt  account.cc  account.h  account_ref.cc  account_ref.h  account_summaries.cc  account_summaries.h  account_summary.cc  account_summary.h  account_ticket.cc  account_ticket.h  accounts.cc  accounts.h  ad_words_account.cc  ad_words_account.h  analytics_api.h  analytics_dataimport_delete_upload_data_request.cc  analytics_dataimport_delete_upload_data_request.h  analytics_service.cc  analytics_service.h  column.cc  column.h  columns.cc  columns.h  custom_data_source.cc  custom_data_source.h  custom_data_sources.cc  custom_data_sources.h  custom_dimension.cc  custom_dimension.h  custom_dimensions.cc  custom_dimensions.h  custom_metric.cc  custom_metric.h  custom_metrics.cc  custom_metrics.h  entity_ad_words_link.cc  entity_ad_words_link.h  entity_ad_words_links.cc  entity_ad_words_links.h  (+68 more)
service_apis/calendar/google/calendar_api/: acl.cc  acl.h  acl_rule.cc  acl_rule.h  calendar.cc  calendar.h  calendar_api.h  calendar_list.cc  calendar_list.h  calendar_list_entry.cc  calendar_list_entry.h  calendar_notification.cc  calendar_notification.h  calendar_service.cc  calendar_service.h  channel.cc  channel.h  color_definition.cc  color_definition.h  colors.cc  colors.h  deep_link_data.cc  deep_link_data.h  display_info.cc  display_info.h  error.cc  error.h  event.cc  event.h  event_attachment.cc  event_attachment.h  event_attendee.cc  event_attendee.h  event_date_time.cc  event_date_time.h  event_habit_instance.cc  event_habit_instance.h  event_reminder.cc  event_reminder.h  events.cc  (+23 more)
src/googleapis/client/: CMakeLists.txt
src/googleapis/client/auth/: jwt_builder.cc  oauth2_authorization.cc  oauth2_service_authorization.cc
src/samples/: CMakeLists.txt  README.md  analytics_sample_main.cc  storage_sample_main.cc
